--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebase": "^2.2.8",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
