--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.9.1",
+    "@reach/combobox": "^0.11.2",
+    "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "date-fns": "^2.16.1",
     "firebase": "^8.0.2",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.1",
@@ -17,6 +20,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "use-places-autocomplete": "^1.6.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
