--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.16.1",
     "firebase": "^8.0.2",
     "google-maps-react": "^2.0.6",
+    "mdbreact": "^4.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase": "^2.2.8",
